Made fields in report builder required. Fixed console errors from null chart tooltip values. Added margin-bottom to provide space between control elements when row is wrapped.

--- a/src/app/pages/reportsdashboard/reportsdashboard.scss
+++ b/src/app/pages/reportsdashboard/reportsdashboard.scss
@@ -32,6 +32,10 @@ ul.ct-legend {
   margin: 24px 24px 0px;
 }
 
+.reports-dash-global-controls > *{
+  margin-bottom:32px;
+}
+
 .mat-button-toggle .mat-icon{
   font-size:24px;
   line-height: normal;
